# gst-tetime

./: Makefile  README  configure  configure.ac
src/: Makefile  Makefile.am  Makefile.in  gsttetime.c  gsttetime.h
src/.deps/: libgstplugin_la-gstplugin.Plo  libgsttetime_la-gsttetime.Plo
